--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,21 @@ html {
 }
 
 body {
+  width: 100%;
+  background-color: #f2f2f2;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
   font-weight: 400;
   color: #333333;
   text-transform: uppercase;
-  width: 100%;
-  background-color: #f2f2f2;
 }
 
 .container {
-  background-color: #fefefe;
   width: 1200px;
+  background-color: #fefefe;
   margin: 0 auto;
   padding: 0 0;
-  background-color: #ffffff;
   box-shadow: 10px 0 10px 0px #dbdbdb,
     -10px 0 10px 0px #dbdbdb;
 }
@@ -38,8 +37,8 @@ body {
 }
 
 .hotels-page {
-  color: #000000;
   background-color: #fefefe;
+  color: #000000;
 }
 
 a {
@@ -57,17 +56,17 @@ a {
 }
 
 .site-navigation {
+  display: flex;
+  text-align: left;
   list-style: none;
   margin: 0;
   padding: 0px 72px;
-  display: flex;
-  text-align: left;
 }
 
 .site-navigation li {
   width: 240px;
+    margin: 15px 0;
   padding: 0;
-  margin: 15px 0;
 }
 
 .site-navigation li:nth-child(3) {
@@ -110,8 +109,8 @@ input[type="radio"].visually-hidden {
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
   padding: 0;
+  border: 0;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -119,14 +118,14 @@ input[type="radio"].visually-hidden {
 }
 
 .welcome-block {
-  margin: 0;
-  padding-top: 75px;
   text-align: center;
   background-color: #ffffff;
   background-image: url("../img/polygon.svg"), url("../img/background-photo.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: 1200px auto, 1200px 537px;
   background-position: center 480px, top center;
+  margin: 0;
+  padding-top: 75px;
 }
 
 .welcome-image {
@@ -134,10 +133,13 @@ input[type="radio"].visually-hidden {
 }
 
 .about-sedona {
-  background-color: #ffffff;
-  margin: 60px auto;
-  background: #fff;
   max-width: 500px;
+  background-color: #ffffff;
+  margin-top: 60px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background: #fff;
 }
 
 .sedona-town {
@@ -148,19 +150,16 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-.fetures-intro {
-}
-
 .features {
   margin-top: 0;
 }
 
 .features-list {
   list-style: none;
-  padding: 0;
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .feature {
@@ -168,9 +167,9 @@ input[type="radio"].visually-hidden {
 }
 
 .feature-description {
+  max-width: 340px;
   text-align: center;
   line-height: 21px;
-  max-width: 340px;
   padding-left: 60px;
 }
 
@@ -215,7 +214,6 @@ input[type="radio"].visually-hidden {
   color: #333333;
   background-color: #ffffff;
   list-style: none;
-  padding: 0;
   display: flex;
   flex-direction: row;
   padding-top: 60px;
@@ -232,8 +230,8 @@ input[type="radio"].visually-hidden {
 }
 
 .spec-description {
-  padding-bottom: 90px;
   max-width: 330px;
+  padding-bottom: 90px;
   text-align: center;
 }
 
@@ -271,7 +269,7 @@ input[type="radio"].visually-hidden {
 
 .booking-heading {
   min-width: 1200px;
-  padding-top: 58px;
+  padding-top: 40px;
   text-align: center;
   font-size: 30px;
   line-height: 36px;
@@ -282,7 +280,7 @@ input[type="radio"].visually-hidden {
 .booking-intro {
   text-align: center;
   line-height: 24px;
-  padding-bottom: 55px;
+  padding-bottom: 50px;
 }
 
 .open-booking {
@@ -358,6 +356,7 @@ input[type="radio"].visually-hidden {
 }
 
 .booking-item input {
+  width: 350px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 28px;
@@ -365,7 +364,6 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   border: none;
   background-color: #f2f2f2;
-  width: 350px;
   padding: 5px 15px;
 }
 
@@ -428,8 +426,8 @@ input[type="radio"].visually-hidden {
 
 .button-search {
   display: inline-block;
-  margin-bottom: 55px;
   width: 460px;
+  margin-bottom: 55px;
   padding: 20px 195px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 21px;
@@ -469,8 +467,8 @@ input[type="radio"].visually-hidden {
 }
 
 .filter fieldset {
-  padding: 0;
   margin: 0;
+  padding: 0;
   border: none;
 }
 
@@ -529,16 +527,16 @@ input[type="radio"].visually-hidden {
 }
 
 .filters-right {
+  width: 330px;
   margin-left: 200px;
   padding-right: 73px;
-  width: 330px;
 }
 
 .filter-range-title {
-  margin-bottom: 9px;
   font-weight: 600;
   font-size: 16px;
   line-height: 21px;
+  margin-bottom: 9px;
 }
 
 .price-controls {
@@ -571,12 +569,12 @@ input[type="radio"].visually-hidden {
 
 .price-controls .min-price,
 .price-controls .max-price {
-  width: 90px;
-  padding-left: 65px;
+  width: 120px;
+  padding-left: 50px;
 }
 
 .price-controls input {
-  width: 50px;
+  width: 100px;
   margin: 0;
   color: inherit;
   font: inherit;
@@ -650,15 +648,15 @@ input[type="radio"].visually-hidden {
 }
 
 .filters ul {
-  padding: 0;
   list-style: none;
   line-height: 21px;
+  padding: 0;
 }
 
 .filters-result {
   display: flex;
-  padding: 30px 73px;
   align-items: center;
+  padding: 30px 73px;
 }
 
 .found {
@@ -675,14 +673,14 @@ input[type="radio"].visually-hidden {
 .sorting-type {
   font-size: 12px;
   color: #b1b1b1;
-  display: flex;
   list-style: none;
+  display: flex;
   padding-left: 0;
 }
 
 li .sorting-type {
-  border-bottom: 1px dashed #81b3d2;
   margin-right: 33px;
+  border-bottom: 1px dashed #81b3d2;
 }
 
 .sorting-type:hover {
@@ -741,11 +739,11 @@ li .current-sorting {
 }
 
 .hotels-item {
-  border-top: 1px solid #e5e5e5;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 30px 73px;
+  border-top: 1px solid #e5e5e5;
 }
 
 .hotels-item:last-child {
@@ -759,8 +757,8 @@ li .current-sorting {
 
 .hotel-item-info {
   width: 290px;
-  padding-left: 30px;
   margin-right: auto;
+  padding-left: 30px;
 }
 
 .hotel-name {
@@ -842,27 +840,27 @@ li .current-sorting {
 }
 
 .main-footer {
-  padding: 35px 0;
   display: flex;
   align-items: center;
   color: #000000;
+  padding: 35px 0;
   background-color: rgba(255, 255, 255, 0.9);
 }
 
 .hashtag {
+  width: 400px;
   color: #000000;
   font-size: 21px;
   font-weight: 700;
-  width: 400px;
   text-align: center;
 }
 
 .footer-social {
-  padding: 0;
+  width: 400px;
   display: flex;
   justify-content: center;
+  padding: 0;
   list-style: none;
-  width: 400px;
   text-align: center;
 }
 
